--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bootstrap": "^5.2.0-beta1",
     "react": "^18.0.0",
-    "react-dom": "^18.0.0"
+    "react-dom": "^18.0.0",
+    "react-masonry-css": "^1.0.16"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
