--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "consumo-api-ram",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://siCasta.github.io/consumo-api-rick-and-morty",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "bootstrap": "^5.2.0-beta1",
